--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,8 @@ html {
   .panels {
     min-height: 100vh;
     overflow: hidden;
+    display: flex;
+    
   }
 
   .panel {
@@ -36,6 +38,11 @@ html {
     font-size: 20px;
     background-size: cover;
     background-position: center;
+    flex: 1;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
   }
 
   .panel1 { background-image:url(https://source.unsplash.com/gYl-UtwNg_I/1500x1500); }
@@ -44,11 +51,16 @@ html {
   .panel4 { background-image:url(https://source.unsplash.com/ITjiVXcwVng/1500x1500); }
   .panel5 { background-image:url(https://source.unsplash.com/3MNzGlQM7qs/1500x1500); }
 
-  /* Flex Children */
+  /* Flex Item */
   .panel > * {
     margin: 0;
     width: 100%;
     transition: transform 0.5s;
+    border: 1px solid red; 
+    flex: 1 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   .panel p {
