--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,10 @@ html {
     justify-content: center;
     align-items: center;
   }
+  .panel>*:first-child{transform: translateY(-100%);}
+  .panel.open-active >*:first-child{transform: translateY(0);}
+  .panel>*:last-child{transform: translateY(100%);}
+  .panel.open-active>*:last-child{transform: translate(0);}
 
   .panel p {
     text-transform: uppercase;
@@ -75,5 +79,6 @@ html {
   }
 
   .panel.open {
+    flex: 5;
     font-size: 40px;
   }
